--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <footer>
                 <p>View this project on Github</p>
-                <a href="#"><i class="fa-brands fa-github fa-5x"></i></a>
+                <a href="https://github.com/cancholan/Hipsterfy"><i class="fa-brands fa-github fa-5x"></i></a>
             </footer>
         </div>
     </body>
