--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
                 <table class="hidden">
                     <thead>
-                        <tr><th>#</i></th><th>Title</th><th>Album</th><th><i class="fa-regular fa-clock"></i></th></tr>
+                        <tr><th>#</i></th><th></th><th>Title</th><th>Album</th><th><i class="fa-regular fa-clock"></i></th></tr>
                     </thead>
                     <tbody class="music">
                         <!--music fetched from api will go here-->
