--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Test</title>
+        <title>Hipsterfy</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,8 +36,8 @@
                 </table>      
             </div>
             <footer>
-                <p>View this project on Github</p>
-                <a href="https://github.com/cancholan/Hipsterfy"><i class="fa-brands fa-github fa-5x"></i></a>
+                <p>View this project on GitHub</p>
+                <a href="https://github.com/cancholan/Hipsterfy" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
             </footer>
         </div>
     </body>
