--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input type="button" class="btn" value="Search">
                 </div>
                 
-                <table class="hidden">
+                <table class="hidden table">
                     <thead>
                         <tr><th>#</i></th><th></th><th>Title</th><th>Album</th><th><i class="fa-regular fa-clock"></i></th></tr>
                     </thead>
