Add pop-up warning
- replace browser alert with pop-up display
- prompt user to enter search query
- notify user if no preview track is available

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     </tbody>
                 </table>      
             </div>
+            <div class="warning">
+                <i class="fa-solid fa-x"></i>
+                <!--Warnings/errors will go here-->
+            </div>
             <footer>
                 <p>View this project on GitHub</p>
                 <a href="https://github.com/cancholan/Hipsterfy" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
