Add FAQ accordion

--- a/index.html
+++ b/index.html
@@ -39,9 +39,25 @@
                 <i class="fa-solid fa-x"></i>
                 <!--Warnings/errors will go here-->
             </div>
+            <div class="accordion-body">
+                <div class="accordion">
+                    <h2>F.A.Q.</h2>
+                    <div class="acc-container">
+                        <h4 class="acc-label">Question 1</h4>
+                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                    </div>
+                    <div class="acc-container">
+                        <h4 class="acc-label">Question 2</h4>
+                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                    </div>
+                    <div class="acc-container">
+                        <h4 class="acc-label">Question 3</h4>
+                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                    </div>
+                </div>
+            </div>
             <footer>
-                <p>View this project on GitHub</p>
-                <a href="https://github.com/cancholan/Hipsterfy" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
+                <p>View this project on <a href="https://github.com/cancholan/Hipsterfy" target="_blank" class="github">GitHub</a>.</p>
             </footer>
         </div>
     </body>
