--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
                 <div class="accordion">
                     <h2>F.A.Q.</h2>
                     <div class="acc-container">
-                        <h4 class="acc-label">Question 1</h4>
-                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                        <h4 class="acc-label">How does it work?</h4>
+                        <div class="acc-content">Hipsterfy gets track recommendations from the Spotify API using the name of the artist you searched for and up to four genres from the artist's Spotify profile.</div>
                     </div>
                     <div class="acc-container">
-                        <h4 class="acc-label">Question 2</h4>
-                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                        <h4 class="acc-label">Why did artist X return artist Y? They're not even remotely related!</h4>
+                        <div class="acc-content">Often times, an artist will only have a limited number of generic genres. Think "pop" or "rock". In these cases Spotify will broaden its search efforts in order to fullfill the request.</div>
                     </div>
                     <div class="acc-container">
-                        <h4 class="acc-label">Question 3</h4>
-                        <div class="acc-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum debitis cupiditate eveniet dolorum dolores animi reiciendis error facere quam placeat fuga doloremque aliquid laudantium dolor, eius architecto impedit recusandae temporibus!</div>
+                        <h4 class="acc-label">Why did I get this artist? They are imensely popular!</h4>
+                        <div class="acc-content">Every song on Spotify has a popularity rating from 0 to 100, 100 being the most popular. Many popular songs have multiple versions (single release, alternate mix, live recordings, etc.) hosted on Spotify. Even though these are all the "same song", Spotify has a unique popularity rating for each version that could be very low.</div>
+                    </div>
+                    <div class="acc-container">
+                        <h4 class="acc-label">Why does searching for this artist not work right?</h4>
+                        <div class="acc-content">This project is still a work in progress. There are hundreds of thousands of artists on Spotify and an infinite number of reasons why one particular artist might not produce the expected results.</div>
                     </div>
                 </div>
             </div>
