--- a/index.html
+++ b/index.html
@@ -1,68 +1,129 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hipsterfy</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Hind:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />     
-        <script src="App.js" async defer></script>
-        <script src="Animations.js" async defer></script>
-    </head>
-    <body>
-        <div class="containter">
-            <div class="content">
-                <h1 class="heading">Hipsterfy</h1>
-                <p class="desc">Discover new, less popular music recommendations based on your favorite artists.</p>
-                <div class="form">
-                    <input id="textInput" type="text" placeholder="Try searching for..."/>
-                    <input type="button" class="btn" value="Search">
-                </div>
-                
-                <table class="hidden table">
-                    <thead>
-                        <tr><th class="idCell">#</i></th><th></th><th>Title</th><th>Album</th><th class="durationCell"><i class="fa-regular fa-clock"></i></th></tr>
-                    </thead>
-                    <tbody class="music">
-                        <!--music fetched from api will go here-->
-                    </tbody>
-                </table>      
-            </div>
-            <div class="warning">
-                <i class="fa-solid fa-x"></i>
-                <!--Warnings/errors will go here-->
-            </div>
-            <div class="accordion-body">
-                <div class="accordion">
-                    <h2>F.A.Q.</h2>
-                    <div class="acc-container">
-                        <h4 class="acc-label">How does it work?</h4>
-                        <div class="acc-content">Hipsterfy gets track recommendations from the Spotify API using the name of the artist you searched for and up to four genres from the artist's Spotify profile.</div>
-                    </div>
-                    <div class="acc-container">
-                        <h4 class="acc-label">Why did artist X return artist Y? They're not even remotely related!</h4>
-                        <div class="acc-content">Often times, an artist will only have a limited number of generic genres. Think "pop" or "rock". In these cases Spotify will broaden its search efforts in order to fullfill the request.</div>
-                    </div>
-                    <div class="acc-container">
-                        <h4 class="acc-label">Why did I get this artist? They are imensely popular!</h4>
-                        <div class="acc-content">Every song on Spotify has a popularity rating from 0 to 100, 100 being the most popular. Many popular songs have multiple versions (single release, alternate mix, live recordings, etc.) hosted on Spotify. Even though these are all the "same song", Spotify has a unique popularity rating for each version that could be very low.</div>
-                    </div>
-                    <div class="acc-container">
-                        <h4 class="acc-label">Why does searching for this artist not work right?</h4>
-                        <div class="acc-content">This project is still a work in progress. There are hundreds of thousands of artists on Spotify and an infinite number of reasons why one particular artist might not produce the expected results.</div>
-                    </div>
-                </div>
-            </div>
-            <footer>
-                <p>View this project on <a href="https://github.com/cancholan/Hipsterfy" target="_blank" class="github">GitHub</a>.</p>
-            </footer>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Hipsterfy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script src="App.js" async defer></script>
+    <script src="Animations.js" async defer></script>
+  </head>
+  <body>
+    <div class="containter">
+      <div class="content">
+        <h1 class="heading">Hipsterfy</h1>
+        <p class="desc">
+          Discover new, less popular music recommendations based on your
+          favorite artists.
+        </p>
+        <div class="form">
+          <input
+            id="textInput"
+            type="text"
+            placeholder="Try searching for..."
+          />
+          <input type="button" class="btn" value="Search" />
         </div>
-    </body>
+
+        <table class="hidden table">
+          <thead>
+            <tr>
+              <th class="idCell">#</th>
+              <th></th>
+              <th>Title</th>
+              <th>Album</th>
+              <th class="durationCell"><i class="fa-regular fa-clock"></i></th>
+            </tr>
+          </thead>
+          <tbody class="music">
+            <!--music fetched from api will go here-->
+          </tbody>
+        </table>
+      </div>
+      <div class="warning">
+        <i class="fa-solid fa-x"></i>
+        <!--Warnings/errors will go here-->
+      </div>
+      <div class="accordion-body">
+        <div class="accordion">
+          <h2>F.A.Q.</h2>
+          <div class="acc-container">
+            <h4 class="acc-label">How does it work?</h4>
+            <div class="acc-content">
+              Hipsterfy gets track recommendations from the Spotify API using
+              the name of the artist you searched for and up to four genres from
+              the artist's Spotify profile.
+            </div>
+          </div>
+          <div class="acc-container">
+            <h4 class="acc-label">
+              Why did artist X return artist Y? They're not even remotely
+              related!
+            </h4>
+            <div class="acc-content">
+              Often times, an artist will only have a limited number of generic
+              genres. Think "pop" or "rock". In these cases Spotify will broaden
+              its search efforts in order to fullfill the request.
+            </div>
+          </div>
+          <div class="acc-container">
+            <h4 class="acc-label">
+              Why did I get this artist? They are imensely popular!
+            </h4>
+            <div class="acc-content">
+              Every song on Spotify has a popularity rating from 0 to 100, 100
+              being the most popular. Many popular songs have multiple versions
+              (single release, alternate mix, live recordings, etc.) hosted on
+              Spotify. Even though these are all the "same song", Spotify has a
+              unique popularity rating for each version that could be very low.
+            </div>
+          </div>
+          <div class="acc-container">
+            <h4 class="acc-label">
+              Why does searching for this artist not work right?
+            </h4>
+            <div class="acc-content">
+              This project is still a work in progress. There are hundreds of
+              thousands of artists on Spotify and an infinite number of reasons
+              why one particular artist might not produce the expected results.
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>
+          View this project on
+          <a
+            href="https://github.com/cancholan/Hipsterfy"
+            target="_blank"
+            class="github"
+            >GitHub</a
+          >.
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
