Add create playlist btn
- add button that will eventually allow users to create spotify playlist from returned tracks

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </tbody>
         </table>
       </div>
+      <input type="button" class="hidden btn playlist" value="Create Playlist" />
       <div class="warning">
         <i class="fa-solid fa-x"></i>
         <!--Warnings/errors will go here-->
